@@ -127,6 +127,7 @@
 		      <property name="activates_default">False</property>
 		      <signal name="activate" handler="pl3_find_search" last_modification_time="Sun, 31 Oct 2004 14:32:51 GMT"/>
 		      <signal name="changed" handler="pl3_find_entry_change" last_modification_time="Tue, 08 Mar 2005 17:10:38 GMT"/>
+		      <accelerator key="s" modifiers="GDK_MOD1_MASK" signal="activate"/>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
