@@ -3,4 +3,4 @@
   
   
   
-<category title="Playlist3" place="1"><item><attribute id="1099684971" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099684971"/><summary>Make a list of keybindings</summary><comment>For help</comment></item><item><attribute id="1099686081" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686081"/><summary>Make a help function</summary><comment>With a small expl. of f.e. keybindings/search etc</comment></item><item><attribute id="1099686098" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686098"/><summary>Add more keybindings</summary><comment/></item><item><attribute id="1099686144" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686144"/><summary>Make an option for user to delete a search entry</summary><comment>don't forget keybinding</comment></item><item><attribute id="1099686418" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686418"/><summary>Remember position + size</summary><comment/></item><item><attribute id="1099686432" priority="0" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686484"/><summary>Add shoutcast browser</summary><comment>Shoutcast, or other music browser that does provide a good interface (like xml)</comment></item><item><attribute id="1099686673" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686673"/><summary>window icon for playlist3</summary><comment/></item><item><attribute id="1099687613" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099687613"/><summary>Add keybinding for replace etc.</summary><comment/></item><item><attribute id="1099687619" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099687619"/><summary>Show keybindings in context menu</summary><comment/></item><item><attribute id="1099686053" priority="1" done="1" start_date="731890" completed_date="731898" notify="0" last_edited="1100384223"/><summary>Make avuton's request an option</summary><comment></comment></item></category><category title="Popup" place="0"><item><attribute id="1099686185" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686185"/><summary>Fix BG color</summary><comment>Wrong color now</comment></item><item><attribute id="1099760203" priority="1" done="0" start_date="731891" enddate="99999999" notify="0" endtime="-60" last_edited="1099760203"/><summary>Possibility to sort songs</summary><comment/></item></category><category title="general" place="2"><item><attribute id="1099686513" priority="0" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686513"/><summary>Make gnome-vfs a compile time option</summary><comment/></item><item><attribute id="1099760795" priority="1" done="0" start_date="731891" enddate="99999999" notify="0" endtime="-60" last_edited="1099760795"/><summary>configure intltool check</summary><comment>configure should check for intltool, i think it allready does</comment></item></category></gtodo>
+<category title="Playlist3" place="1"><item><attribute id="1099684971" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099684971"/><summary>Make a list of keybindings</summary><comment>For help</comment></item><item><attribute id="1099686081" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686081"/><summary>Make a help function</summary><comment>With a small expl. of f.e. keybindings/search etc</comment></item><item><attribute id="1099686098" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686098"/><summary>Add more keybindings</summary><comment/></item><item><attribute id="1099687619" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099687619"/><summary>Show keybindings in context menu</summary><comment/></item></category><category title="Popup" place="0"/><category title="general" place="2"><item><attribute id="1099686513" priority="0" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1099686513"/><summary>Make gnome-vfs a compile time option</summary><comment/></item><item><attribute id="1099760795" priority="1" done="0" start_date="731891" enddate="99999999" notify="0" endtime="-60" last_edited="1099760795"/><summary>configure intltool check</summary><comment>configure should check for intltool, i think it allready does</comment></item><item><attribute id="1114414584" priority="1" done="0" start_date="732061" enddate="99999999" notify="0" endtime="-60" last_edited="1114414584"/><summary>Make option  for scrolling title in player window</summary><comment>(optional?)</comment></item></category></gtodo>
